syntax = "proto3";

package admin.service.v1;
option go_package = "kratos-blog/api/admin/service/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/pagination.proto";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 系统配置服务
service SystemService {
  // 获取系统设置列表
  rpc ListSystem (pagination.PagingRequest) returns (ListSystemResponse) {
    option (google.api.http) = {
      get: "/blog/v1/system"
    };
  }

  // 获取系统设置数据
  rpc GetSystem (GetSystemRequest) returns (System) {
    option (google.api.http) = {
      get: "/blog/v1/system/{id}"
    };
  }

  // 创建系统设置
  rpc CreateSystem (CreateSystemRequest) returns (System) {
    option (google.api.http) = {
      post: "/blog/v1/system"
      body: "*"
    };
  }

  // 更新系统设置
  rpc UpdateSystem (UpdateSystemRequest) returns (System) {
    option (google.api.http) = {
      put: "/blog/v1/system/{id}"
      body: "system"
    };
  }

  // 删除系统设置
  rpc DeleteSystem (DeleteSystemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/system/{id}"
    };
  }
}

message System {
  uint64 id = 1;
  optional int32 theme = 2;
  optional string title = 3;
  optional string keywords = 4;
  optional string description = 5;
  optional string recordNumber = 6;
}

// 回应 - 系统设置列表
message ListSystemResponse {
  repeated System items = 1;
  int32 total = 2;
}

// 请求 - 系统设置数据
message GetSystemRequest {
  uint64 id = 1;
}

// 请求 - 创建系统设置
message CreateSystemRequest {
  System system = 1;
  optional uint64 operatorId = 2;
}

// 请求 - 更新系统设置
message UpdateSystemRequest {
  uint64 id = 1;
  System system = 2;
  optional uint64 operatorId = 3;
}

// 请求 - 删除系统设置
message DeleteSystemRequest {
  uint64 id = 1;
  optional uint64 operatorId = 2;
}
